--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "2.8.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-redux": "8.1.2",
     "react-router-dom": "6.15.0",
     "react-scripts": "5.0.1",
@@ -22,13 +23,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start": "npm-run-all -p start:*",
-		"start:react": "react-scripts start",
-		"start:server": "json-server --port 3131 --no-cors --delay 250 --watch public/db/app.json --routes public/db/routes.json"
+    "start:react": "react-scripts start",
+    "start:server": "json-server --port 3131 --no-cors --delay 250 --watch public/db/app.json --routes public/db/routes.json"
   },
   "eslintConfig": {
     "extends": [
