--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "5.3.1",
+    "clsx": "^2.0.0",
     "json-server": "0.17.3",
     "npm-run-all": "4.1.5",
     "react": "^18.2.0",
@@ -15,7 +16,7 @@
     "react-hook-form": "^7.46.1",
     "react-redux": "8.1.2",
     "react-router-dom": "6.15.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "4.2.1",
     "redux-devtools-extension": "2.13.9",
     "redux-thunk": "2.4.2",
