--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,13 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+    "files": {
+      "main.css": "/static/css/main.fd17c655.css",
+      "main.js": "/static/js/main.017476fc.js",
+      "index.html": "/index.html",
+      "main.fd17c655.css.map": "/static/css/main.fd17c655.css.map",
+      "main.017476fc.js.map": "/static/js/main.017476fc.js.map"
     },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
-}
+    "entrypoints": [
+      "static/css/main.fd17c655.css",
+      "static/js/main.017476fc.js"
+    ]
+  }
