--- a/public/db/app.json
+++ b/public/db/app.json
@@ -17,9 +17,9 @@
     {
       "id": "3",
       "status": "Busy",
-      "peopleAmount": 2,
-      "maxPeopleAmount": 3,
-      "bill": 45
+      "people": "3",
+      "maxPeople": "4",
+      "bill": "53"
     },
     {
       "id": "4",
